intrepyd/lustre2py/LustreParser.py
# Generated from Lustre.g4 by ANTLR 4.6
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class LustreParser ( Parser ):

    grammarFileName = "Lustre.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'datatype'", u"'='", u"';'", u"'const'", 
                     u"':'", u"'node'", u"'('", u"')'", u"'returns'", u"'var'", 
                     u"'let'", u"'tel'", u"','", u"'struct'", u"'{'", u"'}'", 
                     u"'enum'", u"'int'", u"'subrange'", u"'['", u"']'", 
                     u"'of'", u"'bool'", u"'real'", u"'-'", u"'--%PROPERTY'", 
                     u"'--%REALIZABLE'", u"'--%IVC'", u"'--%MAIN'", u"'assert'", 
                     u"'floor'", u"'condact'", u"'.'", u"':='", u"'pre'", 
                     u"'not'", u"'*'", u"'/'", u"'div'", u"'mod'", u"'+'", 
                     u"'<'", u"'<='", u"'>'", u"'>='", u"'<>'", u"'and'", 
                     u"'or'", u"'xor'", u"'=>'", u"'->'", u"'if'", u"'then'", 
                     u"'else'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"REAL", 
                      u"BOOL", u"INT", u"ID", u"WS", u"SL_COMMENT", u"ML_COMMENT", 
                      u"C_COMMENT", u"ERROR" ]

    RULE_program = 0
    RULE_datatypedef = 1
    RULE_constant = 2
    RULE_node = 3
    RULE_instrList = 4
    RULE_instr = 5
    RULE_varDeclList = 6
    RULE_varDeclGroup = 7
    RULE_topLevelType = 8
    RULE_datatype = 9
    RULE_bound = 10
    RULE_prop = 11
    RULE_realizabilityInputs = 12
    RULE_ivc = 13
    RULE_main = 14
    RULE_assertion = 15
    RULE_equation = 16
    RULE_lhs = 17
    RULE_expr = 18
    RULE_eID = 19

    ruleNames =  [ u"program", u"datatypedef", u"constant", u"node", u"instrList", 
                   u"instr", u"varDeclList", u"varDeclGroup", u"topLevelType", 
                   u"datatype", u"bound", u"prop", u"realizabilityInputs", 
                   u"ivc", u"main", u"assertion", u"equation", u"lhs", u"expr", 
                   u"eID" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    REAL=55
    BOOL=56
    INT=57
    ID=58
    WS=59
    SL_COMMENT=60
    ML_COMMENT=61
    C_COMMENT=62
    ERROR=63

    def __init__(self, input):
        super(LustreParser, self).__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LustreParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LustreParser.EOF, 0)

        def datatypedef(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LustreParser.DatatypedefContext)
            else:
                return self.getTypedRuleContext(LustreParser.DatatypedefContext,i)


        def constant(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LustreParser.ConstantContext)
            else:
                return self.getTypedRuleContext(LustreParser.ConstantContext,i)


        def node(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LustreParser.NodeContext)
            else:
                return self.getTypedRuleContext(LustreParser.NodeContext,i)


        def getRuleIndex(self):
            return LustreParser.RULE_program

        def accept(self, visitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LustreParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LustreParser.T__0) | (1 << LustreParser.T__3) | (1 << LustreParser.T__5))) != 0):
                self.state = 43
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LustreParser.T__0]:
                    self.state = 40
                    self.datatypedef()
                    pass
                elif token in [LustreParser.T__3]:
                    self.state = 41
                    self.constant()
                    pass
                elif token in [LustreParser.T__5]:
                    self.state = 42
                    self.node()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(LustreParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DatatypedefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LustreParser.DatatypedefContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LustreParser.ID, 0)

        def topLevelType(self):
            return self.getTypedRuleContext(LustreParser.TopLevelTypeContext,0)


        def getRuleIndex(self):
            return LustreParser.RULE_datatypedef

        def accept(self, visitor):
            if hasattr(visitor, "visitDatatypedef"):
                return visitor.visitDatatypedef(self)
            else:
                return visitor.visitChildren(self)




    def datatypedef(self):

        localctx = LustreParser.DatatypedefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_datatypedef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(LustreParser.T__0)
            self.state = 51
            self.match(LustreParser.ID)
            self.state = 52
            self.match(LustreParser.T__1)
            self.state = 53
            self.topLevelType()
            self.state = 54
            self.match(LustreParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LustreParser.ConstantContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LustreParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(LustreParser.ExprContext,0)


        def datatype(self):
            return self.getTypedRuleContext(LustreParser.DatatypeContext,0)


        def getRuleIndex(self):
            return LustreParser.RULE_constant

        def accept(self, visitor):
            if hasattr(visitor, "visitConstant"):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)




    def constant(self):

        localctx = LustreParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(LustreParser.T__3)
            self.state = 57
            self.match(LustreParser.ID)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LustreParser.T__4:
                self.state = 58
                self.match(LustreParser.T__4)
                self.state = 59
                self.datatype(0)


            self.state = 62
            self.match(LustreParser.T__1)
            self.state = 63
            self.expr(0)
            self.state = 64
            self.match(LustreParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NodeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LustreParser.NodeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.inp = None # VarDeclListContext
            self.outp = None # VarDeclListContext
            self.local = None # VarDeclListContext
            self.instrlst = None # InstrListContext

        def ID(self):
            return self.getToken(LustreParser.ID, 0)

        def varDeclList(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LustreParser.VarDeclListContext)
            else:
                return self.getTypedRuleContext(LustreParser.VarDeclListContext,i)


        def instrList(self):
            return self.getTypedRuleContext(LustreParser.InstrListContext,0)


        def getRuleIndex(self):
            return LustreParser.RULE_node

        def accept(self, visitor):
            if hasattr(visitor, "visitNode"):
                return visitor.visitNode(self)
            else:
                return visitor.visitChildren(self)




    def node(self):

        localctx = LustreParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_node)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(LustreParser.T__5)
            self.state = 67
            self.match(LustreParser.ID)
            self.state = 68
            self.match(LustreParser.T__6)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LustreParser.ID:
                self.state = 69
                localctx.inp = self.varDeclList()


            self.state = 72
            self.match(LustreParser.T__7)
            self.state = 73
            self.match(LustreParser.T__8)
            self.state = 74
            self.match(LustreParser.T__6)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LustreParser.ID:
                self.state = 75
                localctx.outp = self.varDeclList()


            self.state = 78
            self.match(LustreParser.T__7)
            self.state = 79
            self.match(LustreParser.T__2)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LustreParser.T__9:
                self.state = 80
                self.match(LustreParser.T__9)
                self.state = 81
                localctx.local = self.varDeclList()
                self.state = 82
                self.match(LustreParser.T__2)


            self.state = 86
            self.match(LustreParser.T__10)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LustreParser.T__6) | (1 << LustreParser.T__25) | (1 << LustreParser.T__26) | (1 << LustreParser.T__27) | (1 << LustreParser.T__28) | (1 << LustreParser.T__29) | (1 << LustreParser.ID))) != 0):
                self.state = 87
                localctx.instrlst = self.instrList()


            self.state = 90
            self.match(LustreParser.T__11)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LustreParser.T__2:
                self.state = 91
                self.match(LustreParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstrListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LustreParser.InstrListContext, self).__init__(parent, invokingState)
            self.parser = parser

        def instr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LustreParser.InstrContext)
            else:
                return self.getTypedRuleContext(LustreParser.InstrContext,i)


        def getRuleIndex(self):
            return LustreParser.RULE_instrList

        def accept(self, visitor):
            if hasattr(visitor, "visitInstrList"):
                return visitor.visitInstrList(self)
            else:
                return visitor.visitChildren(self)




    def instrList(self):

        localctx = LustreParser.InstrListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instrList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.instr()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LustreParser.T__6) | (1 << LustreParser.T__25) | (1 << LustreParser.T__26) | (1 << LustreParser.T__27) | (1 << LustreParser.T__28) | (1 << LustreParser.T__29) | (1 << LustreParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstrContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LustreParser.InstrContext, self).__init__(parent, invokingState)
            self.parser = parser

        def equation(self):
            return self.getTypedRuleContext(LustreParser.EquationContext,0)


        def prop(self):
            return self.getTypedRuleContext(LustreParser.PropContext,0)


        def assertion(self):
            return self.getTypedRuleContext(LustreParser.AssertionContext,0)


        def main(self):
            return self.getTypedRuleContext(LustreParser.MainContext,0)


        def realizabilityInputs(self):
            return self.getTypedRuleContext(LustreParser.RealizabilityInputsContext,0)


        def ivc(self):
            return self.getTypedRuleContext(LustreParser.IvcContext,0)


        def getRuleIndex(self):
            return LustreParser.RULE_instr

        def accept(self, visitor):
            if hasattr(visitor, "visitInstr"):
                return visitor.visitInstr(self)
            else:
                return visitor.visitChildren(self)




    def instr(self):

        localctx = LustreParser.InstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_instr)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LustreParser.T__6, LustreParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.equation()
                pass
            elif token in [LustreParser.T__25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.prop()
                pass
            elif token in [LustreParser.T__29]:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.assertion()
                pass
            elif token in [LustreParser.T__28]:
                self.enterOuterAlt(localctx, 4)
                self.state = 102
                self.main()
                pass
            elif token in [LustreParser.T__26]:
                self.enterOuterAlt(localctx, 5)
                self.state = 103
                self.realizabilityInputs()
                pass
            elif token in [LustreParser.T__27]:
                self.enterOuterAlt(localctx, 6)
                self.state = 104
                self.ivc()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LustreParser.VarDeclListContext, self).__init__(parent, invokingState)
            self.parser = parser

        def varDeclGroup(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LustreParser.VarDeclGroupContext)
            else:
                return self.getTypedRuleContext(LustreParser.VarDeclGroupContext,i)


        def getRuleIndex(self):
            return LustreParser.RULE_varDeclList

        def accept(self, visitor):
            if hasattr(visitor, "visitVarDeclList"):
                return visitor.visitVarDeclList(self)
            else:
                return visitor.visitChildren(self)




    def varDeclList(self):

        localctx = LustreParser.VarDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varDeclList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.varDeclGroup()
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 108
                    self.match(LustreParser.T__2)
                    self.state = 109
                    self.varDeclGroup() 
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclGroupContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LustreParser.VarDeclGroupContext, self).__init__(parent, invokingState)
            self.parser = parser

        def eID(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LustreParser.EIDContext)
            else:
                return self.getTypedRuleContext(LustreParser.EIDContext,i)


        def datatype(self):
            return self.getTypedRuleContext(LustreParser.DatatypeContext,0)


        def getRuleIndex(self):
            return LustreParser.RULE_varDeclGroup

        def accept(self, visitor):
            if hasattr(visitor, "visitVarDeclGroup"):
                return visitor.visitVarDeclGroup(self)
            else:
                return visitor.visitChildren(self)




    def varDeclGroup(self):

        localctx = LustreParser.VarDeclGroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varDeclGroup)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.eID(0)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LustreParser.T__12:
                self.state = 116
                self.match(LustreParser.T__12)
                self.state = 117
                self.eID(0)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(LustreParser.T__4)
            self.state = 124
            self.datatype(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TopLevelTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LustreParser.TopLevelTypeContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LustreParser.RULE_topLevelType

     
        def copyFrom(self, ctx):
            super(LustreParser.TopLevelTypeContext, self).copyFrom(ctx)



    class RecordTypeContext(TopLevelTypeContext):

        def __init__(self, parser, ctx): # actually a LustreParser.TopLevelTypeContext)
            super(LustreParser.RecordTypeContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(LustreParser.ID)
            else:
                return self.getToken(LustreParser.ID, i)
        def datatype(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LustreParser.DatatypeContext)
            else:
                return self.getTypedRuleContext(LustreParser.DatatypeContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitRecordType"):
                return visitor.visitRecordType(self)
            else:
                return visitor.visitChildren(self)


    class EnumTypeContext(TopLevelTypeContext):

        def __init__(self, parser, ctx): # actually a LustreParser.TopLevelTypeContext)
            super(LustreParser.EnumTypeContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(LustreParser.ID)
            else:
                return self.getToken(LustreParser.ID, i)

        def accept(self, visitor):
            if hasattr(visitor, "visitEnumType"):
                return visitor.visitEnumType(self)
            else:
                return visitor.visitChildren(self)


    class PlainTypeContext(TopLevelTypeContext):

        def __init__(self, parser, ctx): # actually a LustreParser.TopLevelTypeContext)
            super(LustreParser.PlainTypeContext, self).__init__(parser)
            self.copyFrom(ctx)

        def datatype(self):
            return self.getTypedRuleContext(LustreParser.DatatypeContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitPlainType"):
                return visitor.visitPlainType(self)
            else:
                return visitor.visitChildren(self)



    def topLevelType(self):

        localctx = LustreParser.TopLevelTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_topLevelType)
        self._la = 0 # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LustreParser.T__17, LustreParser.T__18, LustreParser.T__22, LustreParser.T__23, LustreParser.ID]:
                localctx = LustreParser.PlainTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.datatype(0)
                pass
            elif token in [LustreParser.T__13]:
                localctx = LustreParser.RecordTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(LustreParser.T__13)
                self.state = 128
                self.match(LustreParser.T__14)

                self.state = 129
                self.match(LustreParser.ID)
                self.state = 130
                self.match(LustreParser.T__4)
                self.state = 131
                self.datatype(0)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LustreParser.T__2:
                    self.state = 133
                    self.match(LustreParser.T__2)
                    self.state = 134
                    self.match(LustreParser.ID)
                    self.state = 135
                    self.match(LustreParser.T__4)
                    self.state = 136
                    self.datatype(0)
                    self.state = 141
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 142
                self.match(LustreParser.T__15)
                pass
            elif token in [LustreParser.T__16]:
                localctx = LustreParser.EnumTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.match(LustreParser.T__16)
                self.state = 145
                self.match(LustreParser.T__14)
                self.state = 146
                self.match(LustreParser.ID)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LustreParser.T__12:
                    self.state = 147
                    self.match(LustreParser.T__12)
                    self.state = 148
                    self.match(LustreParser.ID)
                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 154
                self.match(LustreParser.T__15)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DatatypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LustreParser.DatatypeContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LustreParser.RULE_datatype

     
        def copyFrom(self, ctx):
            super(LustreParser.DatatypeContext, self).copyFrom(ctx)


    class ArrayTypeContext(DatatypeContext):

        def __init__(self, parser, ctx): # actually a LustreParser.DatatypeContext)
            super(LustreParser.ArrayTypeContext, self).__init__(parser)
            self.copyFrom(ctx)

        def datatype(self):
            return self.getTypedRuleContext(LustreParser.DatatypeContext,0)

        def INT(self):
            return self.getToken(LustreParser.INT, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitArrayType"):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)


    class SubrangeTypeContext(DatatypeContext):

        def __init__(self, parser, ctx): # actually a LustreParser.DatatypeContext)
            super(LustreParser.SubrangeTypeContext, self).__init__(parser)
            self.copyFrom(ctx)

        def bound(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LustreParser.BoundContext)
            else:
                return self.getTypedRuleContext(LustreParser.BoundContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitSubrangeType"):
                return visitor.visitSubrangeType(self)
            else:
                return visitor.visitChildren(self)


    class UserTypeContext(DatatypeContext):

        def __init__(self, parser, ctx): # actually a LustreParser.DatatypeContext)
            super(LustreParser.UserTypeContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(LustreParser.ID, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitUserType"):
                return visitor.visitUserType(self)
            else:
                return visitor.visitChildren(self)


    class PrimitiveTypeContext(DatatypeContext):

        def __init__(self, parser, ctx): # actually a LustreParser.DatatypeContext)
            super(LustreParser.PrimitiveTypeContext, self).__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor):
            if hasattr(visitor, "visitPrimitiveType"):
                return visitor.visitPrimitiveType(self)
            else:
                return visitor.visitChildren(self)



    def datatype(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LustreParser.DatatypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_datatype, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LustreParser.T__17]:
                localctx = LustreParser.PrimitiveTypeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 158
                self.match(LustreParser.T__17)
                pass
            elif token in [LustreParser.T__18]:
                localctx = LustreParser.SubrangeTypeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 159
                self.match(LustreParser.T__18)
                self.state = 160
                self.match(LustreParser.T__19)
                self.state = 161
                self.bound()
                self.state = 162
                self.match(LustreParser.T__12)
                self.state = 163
                self.bound()
                self.state = 164
                self.match(LustreParser.T__20)
                self.state = 165
                self.match(LustreParser.T__21)
                self.state = 166
                self.match(LustreParser.T__17)
                pass
            elif token in [LustreParser.T__22]:
                localctx = LustreParser.PrimitiveTypeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 168
                self.match(LustreParser.T__22)
                pass
            elif token in [LustreParser.T__23]:
                localctx = LustreParser.PrimitiveTypeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 169
                self.match(LustreParser.T__23)
                pass
            elif token in [LustreParser.ID]:
                localctx = LustreParser.UserTypeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 170
                self.match(LustreParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 179
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = LustreParser.ArrayTypeContext(self, LustreParser.DatatypeContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_datatype)
                    self.state = 173
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 174
                    self.match(LustreParser.T__19)
                    self.state = 175
                    self.match(LustreParser.INT)
                    self.state = 176
                    self.match(LustreParser.T__20) 
                self.state = 181
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class BoundContext(ParserRuleContext):
